--- a/index.html
+++ b/index.html
@@ -92,12 +92,14 @@
     </div>
     <div class="contact-info">
         <h2>📱 ติดต่อเรา</h2>
-        <p>👨‍💼 คุณเอก (ผู้จัดการร้าน)</p>
-        <p>📞 โทร: 081-755-2006</p>
-        <p>💬 Line ID: wtshoponline</p>
+        <p>👨‍💼 คุณเอก วัทธิกร (ผู้จัดการร้าน)</p>
+        <p>📞 โทร: 081-755-2006 หรือ 082-440-2506</p>
+        <p>💬 Line ID: wattikorn หรือ wtshoponline</p>
+        <p> เพจ: www.facebook.com/meta.mobile.phone </p>
         <div class="contact-buttons">
             <a href="tel:0817552006" class="call-btn">📞 โทรเลย</a>
-            <a href="https://line.me/ti/p/~wtshoponline" class="line-btn">💬 แชทผ่าน Line</a>
+            <a href="https://line.me/ti/p/~wtshoponline" class="line-btn">💬 ทัก Line</a>
+            <a href="https://www.facebook.com/meta.mobile.phone" class="facebook-btn">💬 แชททางเพจ</a>
         </div>
     </div>
 </body>
