--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
             font-weight: bold;
             transition: 0.3s;
         }
-        .call-btn { background: #27ae60; }
-        .line-btn { background: #00c300; }
+        .call-btn { background: #27ae60; } /* ปุ่มโทร */
+        .line-btn { background: #00c300; } /* ปุ่ม Line */
+        .facebook-btn { background: #1877f2; } /* ปุ่ม Facebook */
         .contact-buttons a:hover { opacity: 0.8; }
     </style>
 </head>
@@ -95,7 +96,7 @@
         <p>👨‍💼 คุณเอก วัทธิกร (ผู้จัดการร้าน)</p>
         <p>📞 โทร: 081-755-2006 หรือ 082-440-2506</p>
         <p>💬 Line ID: wattikorn หรือ wtshoponline</p>
-        <p> เพจ: www.facebook.com/meta.mobile.phone </p>
+        <p>🌐 เพจ: <a href="https://www.facebook.com/meta.mobile.phone" style="color: #1DA1F2; text-decoration: none;">Meta Mobile Phone</a></p>
         <div class="contact-buttons">
             <a href="tel:0817552006" class="call-btn">📞 โทรเลย</a>
             <a href="https://line.me/ti/p/~wtshoponline" class="line-btn">💬 ทัก Line</a>
