--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
         <p>👨‍💼 คุณเอก วัทธิกร (ผู้จัดการร้าน)</p>
         <p>📞 โทร: 081-755-2006 หรือ 082-440-2506</p>
         <p>💬 Line ID: wattikorn หรือ wtshoponline</p>
-        <p>🌐 เพจ: <a href="https://www.facebook.com/meta.mobile.phone" style="color: #1DA1F2; text-decoration: none;">Meta Mobile Phone</a></p>
+        <p>🌐 แฟนเพจ: <a href="https://www.facebook.com/meta.mobile.phone" style="color: #1DA1F2; text-decoration: none;">Meta Mobile Phone</a></p>
         <div class="contact-buttons">
             <a href="tel:0817552006" class="call-btn">📞 โทรเลย</a>
             <a href="https://line.me/ti/p/~wtshoponline" class="line-btn">💬 ทัก Line</a>
-            <a href="https://www.facebook.com/meta.mobile.phone" class="facebook-btn">💬 แชททางเพจ</a>
+            <a href="http://m.me/meta.mobile.phone" class="facebook-btn">💬 แชททางเพจ</a>
         </div>
     </div>
 </body>
