--- a/index.html
+++ b/index.html
@@ -147,7 +147,53 @@
             </div>
         </section>
     </main>
-
+        <section class="service-details" style="background-color: #f9f9f9; padding: 20px; border-radius: 12px; margin-top: 20px;">
+        <h2>ทำไมต้องเลือก MMP Shop?</h2>
+        <div class="service-highlights">
+            <ul style="text-align: left; padding-left: 20px;">
+                <li>✅ รับซื้อมือถือมือสอง ให้ราคาสูงที่สุด</li>
+                <li>✅ จ่ายเงินสดทันที</li>
+                <li>✅ มั่นใจได้ 100% เช็คของผ่าน ดันให้ทุกเคส</li>
+                <li>✅ ประเมินราคาเป็นธรรม ไม่มีหมกเม็ด</li>
+                <li>✅ สะดวก รวดเร็ว รับซื้อ ถึงที่ โอนทันที</li>
+                <li>✅ ทีมงานมืออาชีพ พร้อมให้คำแนะนำ</li>
+                <li>✅ ประสบการณ์กว่า 20 ปี เชื่อถือได้</li>
+            </ul>
+        </div>
+        <div class="brand-support" style="margin-top: 15px;">
+            <h3>เรารับซื้อมือถือทุกแบรนด์</h3>
+            <p>
+                <strong>#ไอโฟนมือสอง</strong> 
+                <strong>#iphone</strong> 
+                <strong>#ไอแพค</strong> 
+                <strong>#ipad</strong> 
+                <strong>#ซัมซุง</strong> 
+                <strong>#SamsungGalaxy</strong> 
+                <strong>#Macbook</strong> 
+                และมือถือรุ่นอื่นๆ 
+                OPPO, Huawei, Xiaomi, Honor, Vivo, OnePlus, Realme 
+                ดันทุกเคส ตัดเกรด A/B/C
+            </p>
+        </div>
+        <div class="hashtags" style="margin-top: 15px; text-align: center;">
+            <p>
+                <strong>#MMPshop</strong> 
+                <strong>#MetaMobilePhone</strong> 
+                <strong>#เมต้าโมบายโฟน</strong> 
+                <strong>#รับซื้อโทรศัพท์มือสอง</strong> 
+                <strong>#รับซื้อมือถือมือสอง</strong> 
+                <strong>#รับซื้อไอโฟน</strong> 
+                <strong>#รับซื้อซัมซุง</strong> 
+                <strong>#เทิร์นมือถือ</strong> 
+                <strong>#มือถือมือสองราคาดี</strong> 
+                <strong>#มือถือมือสองคุณภาพดี</strong>
+            </p>
+        </div>
+        <div class="call-to-action" style="text-align: center; margin-top: 15px;">
+            <p>❓ ไม่มั่นใจ? ทักมาสอบถามฟรี! ประเมินราคาไม่มีค่าใช้จ่าย!</p>
+            <p>📞 ทักหาพี่เอกได้ 24 ชม.</p>
+        </div>
+    </section>
     <footer>
         <p style="text-align: center; font-size: 0.8em; color: #666;">© 2024 Meta Mobile Phone - MMP Shop. All Rights Reserved.</p>
     </footer>
