--- a/index.html
+++ b/index.html
@@ -122,9 +122,40 @@
     
     <main>
         <section class="shop-info">
-            <div class="logo">
-                <img src="./logo.jpg" alt="MMP Shop โลโก้ - มืออาชีพรับซื้อมือถือมือสอง">
-            </div>
+            <div class="logo-container" style="
+    background: linear-gradient(135deg, #3498db, #2c3e50);
+    padding: 30px;
+    text-align: center;
+    border-radius: 15px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    margin-bottom: 20px;
+">
+    <div class="logo" style="
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+    ">
+        <img src="./logo.jpg" alt="MMP Shop โลโก้ - มืออาชีพรับซื้อมือถือมือสอง" style="
+            width: 250px;
+            height: 250px;
+            border-radius: 50%;
+            border: 8px solid white;
+            object-fit: cover;
+            box-shadow: 0 15px 30px rgba(0,0,0,0.3);
+        ">
+    </div>
+    <h1 style="
+        color: white;
+        margin: 0;
+        font-size: 2em;
+        text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+    ">Meta Mobile Phone</h1>
+    <p style="
+        color: #f1f1f1;
+        font-size: 1.2em;
+        margin-top: 10px;
+    ">รับซื้อมือถือมือสอง ให้ราคาสูงที่สุด</p>
+     </div>               
             <h1>Meta Mobile Phone | MMP Shop</h1>
             <p>รับซื้อมือถือมือสอง ให้ราคาสูงที่สุด ✨ จ่ายเงินสดทันที 💰</p>
             <div class="highlights">
