--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
                 <li>✅ จ่ายเงินสดทันที</li>
                 <li>✅ มั่นใจได้ 100% เช็คของผ่าน ดันให้ทุกเคส</li>
                 <li>✅ ประเมินราคาเป็นธรรม ไม่มีหมกเม็ด</li>
-                <li>✅ สะดวก รวดเร็ว รับซื้อ ถึงที่ โอนทันที</li>
+                <li>✅ สะดวก รวดเร็ว เข้ามาให้เช็คที่ร้านได้ตลอด ร้านอยู่มาบุญครอง เช็คผ่านโอนทันที</li>
                 <li>✅ ทีมงานมืออาชีพ พร้อมให้คำแนะนำ</li>
-                <li>✅ ประสบการณ์กว่า 20 ปี เชื่อถือได้</li>
+                <li>✅ ประสบการณ์กว่า 20 กว่าปี เชื่อถือได้</li>
             </ul>
         </div>
         <div class="brand-support" style="margin-top: 15px;">
